@startuml

title __MODEL's Class Diagram__\n

  namespace Model {
    class Model.GameData {
        {static} + defense : boolean
        + enemyObjects : ArrayList<GameFigure>
        + fixedObjects : ArrayList<GameFigure>
        + friendObjects : ArrayList<GameFigure>
        {static} + loaded : boolean
        + clear()
        + update()
    }
  }
  

  namespace Model {
    abstract class Model.GameFigure {
        + done : boolean
        + hitCount : int
        + image : BufferedImage
        + location : Float
        + points : int
        + x : int
        + y : int
        + DeregisterObserver()
        + GameFigure()
        + GameFigure()
        + LoadImage()
        + NotifyObservers()
        {static} + RegisterObserver()
        + collideWith()
        {abstract} + getCollisionRadius()
        + getImage()
        {abstract} + render()
        + setLocation()
        {abstract} + update()
    }
  }
  

  namespace Model {
    class Model.MousePointer {
        + SIZE : int
        + MousePointer()
        + getCollisionRadius()
        + render()
        + update()
    }
  }
  

  namespace Model {
    class Model.Shooter {
        + BARREL_LEN : int
        + BASE_SIZE : int
        {static} + UNIT_MOVE : int
        + barrelL : Float
        + barrelR : Float
        + base : Float
        - HEIGHT : int
        - WIDTH : int
        - image : Image
        + Shooter()
        + getCollisionRadius()
        + render()
        + update()
    }
  }
  

  namespace Model {
    class Model.Text {
        ~ color : Color
        ~ font : Font
        ~ text : String
        + Text()
        + getCollisionRadius()
        + render()
        + update()
    }
  }
  

  Model.MousePointer -up-|> Model.GameFigure
  Model.Shooter -up-|> Model.GameFigure
  Model.Text -up-|> Model.GameFigure


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
